hvac-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hvac-deployment
  labels:
    app: hvac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hvac
  template:
    metadata:
      labels:
        app: hvac
    spec:
      containers:
        - name: hvac-container
          image: marcusphan2518/log680-devops:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "30m"
              memory: "64Mi"
            limits:
              cpu: "50m"
              memory: "128Mi"
