hvac_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hvac-controller
  namespace: grp01eq13-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      containers:
      - name: hvac-container
        image: marcusphan2518/log680-devops:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
