hvac-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hvac-service
  namespace: grp01eq13-namespace
spec:
  selector:
    app: hvac
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
